--- a/modules/justthetip/package.json
+++ b/modules/justthetip/package.json
@@ -12,7 +12,11 @@
     "@tiltcheck/types": "workspace:*",
     "@tiltcheck/event-router": "workspace:*",
     "@tiltcheck/pricing-oracle": "workspace:*",
-    "@tiltcheck/config": "workspace:*"
+    "@tiltcheck/config": "workspace:*",
+    "@tiltcheck/natural-language-parser": "workspace:*",
+    "@solana/web3.js": "^1.95.8",
+    "@solana/spl-token": "^0.4.9",
+    "@magic-sdk/admin": "^2.8.2"
   },
   "devDependencies": {
     "typescript": "^5.3.0"
