feat: Add JustTheTip tipping with Solana Pay deep links
- Implement /justthetip Discord command with subcommands:
  - wallet: Register/view external Solana wallets (Phantom, Solflare, etc)
  - tip: Send SOL to users with natural language parsing
  - balance: Check on-chain SOL balance
  - pending: View pending tips (UI only, not implemented)

- Add Solana Pay integration for non-custodial signing:
  - Generate solana:// deep links that open in mobile wallets
  - OS intent system shows wallet picker (Phantom, Solflare, Backpack)
  - No custody - users sign with their own keys

- Natural language parser supports:
  - '5 sol', '$10' (USD conversion), 'all' (entire balance)
  - Confidence scoring and ambiguity detection
  - Helpful error messages with suggestions

- Tilt detection integration:
  - Users on cooldown cannot send tips
  - Prevents tilted gambling losses turning into rage tips

- Architecture:
  - Removed Magic.link dependency (doesn't work for Discord bots)
  - External wallet registration only
  - Flat 0.0007 SOL fee (~$0.07)
  - Pending tips for unregistered recipients (24h hold)

- Dependencies:
  - @solana/pay: Deep link generation
  - uuid: Tip/airdrop ID generation
  - bignumber.js: Solana Pay amount handling

Known limitations:
- Pending tips show message but don't persist
- Fee collection calculated but not sent yet
- No transaction confirmation monitoring
- Airdrop command exists but no Discord integration yet

Tested: TypeScript compilation ✅
Needs: Runtime testing with Discord bot + real wallets

--- a/apps/discord-bot/package.json
+++ b/apps/discord-bot/package.json
@@ -18,6 +18,8 @@
     "@tiltcheck/freespinscan": "workspace:*",
     "@tiltcheck/poker": "workspace:*",
     "@tiltcheck/tiltcheck-core": "workspace:*",
+    "@tiltcheck/justthetip": "workspace:*",
+    "@tiltcheck/natural-language-parser": "workspace:*",
     "@tiltcheck/esm-utils": "workspace:*",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1"
