--- a/modules/justthetip/package.json
+++ b/modules/justthetip/package.json
@@ -9,16 +9,19 @@
     "dev": "tsc --watch"
   },
   "dependencies": {
-    "@tiltcheck/types": "workspace:*",
-    "@tiltcheck/event-router": "workspace:*",
-    "@tiltcheck/pricing-oracle": "workspace:*",
-    "@tiltcheck/config": "workspace:*",
-    "@tiltcheck/natural-language-parser": "workspace:*",
-    "@solana/web3.js": "^1.95.8",
+    "@solana/pay": "^0.2.6",
     "@solana/spl-token": "^0.4.9",
-    "@magic-sdk/admin": "^2.8.2"
+    "@solana/web3.js": "^1.95.8",
+    "@tiltcheck/config": "workspace:*",
+    "@tiltcheck/event-router": "workspace:*",
+    "@tiltcheck/natural-language-parser": "workspace:*",
+    "@tiltcheck/pricing-oracle": "workspace:*",
+    "@tiltcheck/types": "workspace:*",
+    "bignumber.js": "^9.3.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^11.0.0",
     "typescript": "^5.3.0"
   }
 }
