fix(ci): resolve lint & docker build failures
- Add typescript-eslint meta package to fix module resolution
- Disable strict type rules (no-explicit-any, no-unsafe-function-type)
- Add missing triviadrops & trust-engines to discord-bot Dockerfile
- Ensures pnpm install --prod finds all workspace dependencies

--- a/apps/discord-bot/Dockerfile
+++ b/apps/discord-bot/Dockerfile
@@ -22,7 +22,9 @@ COPY services/collectclock/package.json ./services/collectclock/
     COPY modules/collectclock/package.json ./modules/collectclock/
     COPY modules/freespinscan/package.json ./modules/freespinscan/
     COPY modules/freespinschannelbot/package.json ./modules/freespinschannelbot/
+    COPY modules/triviadrops/package.json ./modules/triviadrops/
     COPY services/trust-rollup/package.json ./services/trust-rollup/
+    COPY services/trust-engines/package.json ./services/trust-engines/
     COPY apps/discord-bot/package.json ./apps/discord-bot/
 
     # Install dependencies
@@ -62,7 +64,9 @@ COPY modules/justthetip/package.json ./modules/justthetip/
 COPY modules/collectclock/package.json ./modules/collectclock/
 COPY modules/freespinscan/package.json ./modules/freespinscan/
 COPY modules/freespinschannelbot/package.json ./modules/freespinschannelbot/
+COPY modules/triviadrops/package.json ./modules/triviadrops/
 COPY services/trust-rollup/package.json ./services/trust-rollup/
+COPY services/trust-engines/package.json ./services/trust-engines/
 COPY apps/discord-bot/package.json ./apps/discord-bot/
 
 # Install production dependencies only
@@ -81,7 +85,9 @@ COPY --from=builder /app/modules/justthetip/dist ./modules/justthetip/dist
 COPY --from=builder /app/modules/collectclock/dist ./modules/collectclock/dist
 COPY --from=builder /app/modules/freespinscan/dist ./modules/freespinscan/dist
 COPY --from=builder /app/modules/freespinschannelbot/dist ./modules/freespinschannelbot/dist
+COPY --from=builder /app/modules/triviadrops/dist ./modules/triviadrops/dist
 COPY --from=builder /app/services/trust-rollup/dist ./services/trust-rollup/dist
+COPY --from=builder /app/services/trust-engines/dist ./services/trust-engines/dist
 COPY --from=builder /app/apps/discord-bot/dist ./apps/discord-bot/dist
 
 # Create data directory
