--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint": "^9.12.0",
     "@typescript-eslint/eslint-plugin": "^8.9.0",
     "@typescript-eslint/parser": "^8.9.0",
+    "typescript-eslint": "^8.9.0",
     "eslint-config-prettier": "^9.1.0",
     "jsdom": "^24.0.0",
     "pa11y": "^6.2.3",
