--- a/modules/lockvault/package.json
+++ b/modules/lockvault/package.json
@@ -16,7 +16,7 @@
     "build": "tsc -p tsconfig.json",
     "dev": "tsx watch src/index.ts",
     "clean": "rm -rf dist",
-    "test": "echo 'lockvault tests TBD'"
+    "test": "vitest --run modules/lockvault"
   },
   "dependencies": {
     "@tiltcheck/event-router": "workspace:*",
