--- a/services/landing/package.json
+++ b/services/landing/package.json
@@ -8,6 +8,7 @@
     "dev": "NODE_ENV=development node server.js"
   },
   "dependencies": {
+    "@tiltcheck/express-utils": "workspace:*",
     "express": "^4.19.0"
   }
 }
