--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,14 +36,15 @@ jobs:
         run: pnpm test
       - name: Landing server health check
         run: |
-          export PORT=8080
+          export PORT=8085
           export LANDING_LOG_PATH=/tmp/ci-landing.log
           export ADMIN_IP_1=127.0.0.1
+          export RATE_LIMIT_DISABLED=1
           cd services/landing
           node server.js &
           SERVER_PID=$!
           sleep 5
-          curl -f http://localhost:8080/health || (kill $SERVER_PID && exit 1)
+          curl -f http://localhost:8085/health || (kill $SERVER_PID && exit 1)
           kill $SERVER_PID
       - name: Generate coverage report
         run: pnpm coverage
