--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,7 @@ services:
   landing:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: services/landing/Dockerfile
     container_name: tiltcheck-landing
     ports:
       - "8080:8080"
