--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: Install pnpm
-        run: npm install -g pnpm@8
-      - name: Install deps
-        run: pnpm install --frozen-lockfile || pnpm install
+      - name: Activate pnpm 9 (lockfile v9)
+        run: corepack prepare pnpm@9.0.0 --activate
+      - name: Install deps (frozen lockfile)
+        run: pnpm install --frozen-lockfile
       - name: Build all
         run: pnpm build
       - name: Lint
@@ -70,10 +70,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: Install pnpm
-        run: npm install -g pnpm@8
-      - name: Install deps
-        run: pnpm install --frozen-lockfile || pnpm install
+      - name: Activate pnpm 9 (lockfile v9)
+        run: corepack prepare pnpm@9.0.0 --activate
+      - name: Install deps (frozen lockfile)
+        run: pnpm install --frozen-lockfile
       - name: Run audits (bundle + contrast + a11y)
         run: pnpm audit:all
       - name: Upload component bundle
@@ -94,10 +94,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: Install pnpm
-        run: npm install -g pnpm@8
-      - name: Install deps
-        run: pnpm install --frozen-lockfile || pnpm install
+      - name: Activate pnpm 9 (lockfile v9)
+        run: corepack prepare pnpm@9.0.0 --activate
+      - name: Install deps (frozen lockfile)
+        run: pnpm install --frozen-lockfile
       - name: Run landing accessibility audit
         run: pnpm a11y:audit:landing
       - name: Upload landing a11y artifact
