--- a/.github/workflows/health-smoke.yml
+++ b/.github/workflows/health-smoke.yml
@@ -24,11 +24,11 @@ jobs:
       - name: Build images
         env:
           DOCKER_BUILDKIT: 1
-        run: docker compose build discord-bot trust-rollup landing
+        run: docker compose build justthetip-bot trust-rollup landing
       - name: Start services (smoke mode)
         env:
           SKIP_DISCORD_LOGIN: 'true'
-        run: docker compose up -d discord-bot trust-rollup landing
+        run: docker compose up -d justthetip-bot trust-rollup landing
       - name: Wait briefly for startup
         run: sleep 8
       - name: Run health checks (fail if not ready)
@@ -40,7 +40,7 @@ jobs:
       - name: Dump logs on failure
         if: failure()
         run: |
-          docker logs tiltcheck-bot || true
+          docker logs justthetip-bot || true
           docker logs tiltcheck-rollup || true
       - name: Success marker
         run: echo "✅ Smoke health passed"
