--- a/packages/email-templates/package.json
+++ b/packages/email-templates/package.json
@@ -16,13 +16,13 @@
     "test": "vitest"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "@react-email/components": "^0.0.25"
+    "@react-email/components": "^0.0.25",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "typescript": "^5.0.0",
-    "vitest": "^2.0.0"
+    "vitest": "^4.0.13"
   }
 }
