--- a/packages/express-utils/package.json
+++ b/packages/express-utils/package.json
@@ -7,13 +7,19 @@
   "scripts": {
     "test": "vitest"
   },
-  "keywords": ["express", "middleware", "logging", "security", "metrics"],
+  "keywords": [
+    "express",
+    "middleware",
+    "logging",
+    "security",
+    "metrics"
+  ],
   "author": "TiltCheck",
   "license": "UNLICENSED",
   "dependencies": {
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "vitest": "^1.6.1"
+    "vitest": "^4.0.13"
   }
 }
