--- a/services/dashboard/package.json
+++ b/services/dashboard/package.json
@@ -3,19 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "main": "src/server.ts",
+  "main": "src/index.ts",
   "scripts": {
-    "dev": "ts-node src/server.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/server.js",
+    "start": "node dist/index.js",
     "test": "vitest --run"
   },
   "dependencies": {
     "express": "^4.19.0",
+    "cors": "^2.8.5",
     "@tiltcheck/types": "workspace:*",
     "@tiltcheck/event-router": "workspace:*"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.13",
+    "@types/node": "^20.0.0",
+    "tsx": "^4.0.0",
+    "typescript": "^5.0.0"
   }
 }
