--- a/services/pricing-oracle/package.json
+++ b/services/pricing-oracle/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@tiltcheck/pricing-oracle",
   "version": "0.1.0",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "test": "vitest run services/pricing-oracle"
