--- a/services/pricing-oracle/package.json
+++ b/services/pricing-oracle/package.json
@@ -2,7 +2,7 @@
   "name": "@tiltcheck/pricing-oracle",
   "version": "0.1.0",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "src/index.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "test": "vitest run services/pricing-oracle"
