fix: disable noUnusedLocals and add ai-client dependency to triviadrops

--- a/modules/triviadrops/package.json
+++ b/modules/triviadrops/package.json
@@ -10,6 +10,8 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@tiltcheck/ai-client": "workspace:*",
+    "@tiltcheck/types": "workspace:*",
     "@ai-sdk/openai": "^2.0.69",
     "ai": "^5.0.97"
   }
