fix: add root /assets directory, block /docs access, enable CORS for dashboard API
- Created root /assets with logo/icons for shared static serving
- Blocked public /docs directory access via nginx return 403
- Added CORS headers to /api/ location for frontend dashboard
- Updated Dockerfile to COPY assets into final image

--- a/Dockerfile.unified
+++ b/Dockerfile.unified
@@ -48,6 +48,9 @@ RUN apt-get update -qq && \
 # Copy built application
 COPY --from=build /app /app
 
+# Ensure assets are in place
+COPY assets /app/assets
+
 # Copy nginx config for unified container
 COPY services/reverse-proxy/nginx.render.conf /etc/nginx/nginx.conf
 
