--- a/services/reverse-proxy/nginx.render.conf
+++ b/services/reverse-proxy/nginx.render.conf
@@ -55,6 +55,12 @@ http {
     listen 0.0.0.0:8080;
     server_name _;
 
+    # Block access to docs directory
+    location /docs {
+      return 403 '{"error":"Access forbidden"}';
+      add_header Content-Type application/json;
+    }
+
     # Landing pages at root
     location / {
       proxy_pass http://landing_upstream;
@@ -95,6 +101,17 @@ http {
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+      
+      # CORS headers for frontend access
+      add_header Access-Control-Allow-Origin $http_origin always;
+      add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS' always;
+      add_header Access-Control-Allow-Headers 'Content-Type' always;
+      add_header Access-Control-Allow-Credentials 'true' always;
+      
+      if ($request_method = 'OPTIONS') {
+        return 204;
+      }
+      
       limit_req zone=perip burst=5;
     }
 
