Fix Docker build errors with ordered build script
- Created scripts/ordered-build.sh to ensure workspace dependencies build in correct order
- Fixes TypeScript compilation errors in justthetip module (lines 196, 214)
- Root cause: modules were compiling before their workspace deps were built
- Build now proceeds in stages: core packages → services → extended packages → modules → apps
- Updated package.json to use ordered build script
- Made justthetip build script explicit with -p tsconfig.json flag

This ensures packages like @tiltcheck/types, @tiltcheck/config, and @tiltcheck/event-router
are built before modules like justthetip that depend on them.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "scripts": {
     "dev": "pnpm --parallel --recursive dev",
-    "build": "pnpm --recursive build",
+    "build": "bash scripts/ordered-build.sh",
+    "build:legacy": "pnpm -r --workspace-concurrency=1 build",
     "test": "vitest --run",
     "test:watch": "vitest",
     "test:all": "pnpm --recursive test",
