Fix discord-bot TypeScript errors
- Added missing await for async registerExternalWallet calls in justthetip.ts and tip.ts
- Added @tiltcheck/poker to discord-bot dependencies (was missing from package.json)
- Fixes TS2339 errors: Property 'address' does not exist on type 'Promise<WalletInfo>'

--- a/apps/discord-bot/package.json
+++ b/apps/discord-bot/package.json
@@ -22,6 +22,7 @@
     "@tiltcheck/trust-engines": "workspace:*",
     "@tiltcheck/justthetip": "workspace:*",
     "@tiltcheck/natural-language-parser": "workspace:*",
+    "@tiltcheck/poker": "workspace:*",
     "@tiltcheck/esm-utils": "workspace:*",
     "@tiltcheck/lockvault": "workspace:*",
     "discord.js": "^14.14.1",
