--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,29 +131,29 @@ jobs:
           path: |
             dist/landing-lighthouse-accessibility.json
 
-  docker:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          driver: cloud
-          endpoint: "jmenichole/tiltcheck"
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: ./apps/discord-bot/Dockerfile
-          tags: "${{ secrets.DOCKER_USERNAME }}/docker-build-cloud-demo:latest"
-          # For pull requests, export results to the build cache.
-          # Otherwise, push to a registry.
-          outputs: ${{ github.event_name == 'pull_request' && 'type=cacheonly' || 'type=registry' }}
+#   docker:
+#     runs-on: ubuntu-latest
+#     permissions:
+#       contents: read
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v4
+#       - name: Log in to Docker Hub
+#         uses: docker/login-action@v3
+#         with:
+#           username: ${{ secrets.DOCKER_USERNAME }}
+#           password: ${{ secrets.DOCKER_PASSWORD }}
+#       - name: Set up Docker Buildx
+#         uses: docker/setup-buildx-action@v3
+#         with:
+#           driver: cloud
+#           endpoint: "jmenichole/tiltcheck"
+#       - name: Build and push
+#         uses: docker/build-push-action@v6
+#         with:
+#           context: .
+#           file: ./apps/discord-bot/Dockerfile
+#           tags: "${{ secrets.DOCKER_USERNAME }}/docker-build-cloud-demo:latest"
+#           # For pull requests, export results to the build cache.
+#           # Otherwise, push to a registry.
+#           outputs: ${{ github.event_name == 'pull_request' && 'type=cacheonly' || 'type=registry' }}
