--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lighthouse:ci": "node scripts/lighthouse-ci.js"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
     "@types/jsdom": "^27.0.0",
     "@types/node": "^24.10.1",
     "@types/supertest": "^6.0.2",
