Fix TypeScript build errors and casino-data-api prepare script
- Add @types/bcryptjs to packages/config devDependencies
- Remove problematic prepare script from casino-data-api (was using npm instead of pnpm)
- Update pnpm-lock.yaml

Fixes:
- TS2688: Cannot find type definition file for 'bcryptjs' in packages/config
- casino-data-api build failures during pnpm install prepare hook

--- a/services/casino-data-api/package.json
+++ b/services/casino-data-api/package.json
@@ -11,8 +11,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "cli": "tsx src/cli.ts",
-    "prepare": "npm run build 2>/dev/null || true"
+    "cli": "tsx src/cli.ts"
   },
   "keywords": ["tiltcheck", "casino-data", "api", "ai-agent"],
   "dependencies": {
