fix(deps): add puppeteer to onlyBuiltDependencies and zod to config
- Add puppeteer to pnpm.onlyBuiltDependencies to prevent install issues
- Add zod dependency to packages/config/package.json
- Fix TypeScript type annotations in env.ts (explicit val: string)

--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
       "bufferutil",
       "esbuild",
       "sharp",
-      "utf-8-validate"
+      "utf-8-validate",
+      "puppeteer"
     ]
   }
 }
