--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "build": "tsc -p tsconfig.json"
   },
+  "dependencies": {
+    "zod": "^3.25.76"
+  },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "typescript": "^5.4.0"
