--- a/services/event-router/package.json
+++ b/services/event-router/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/node": "^24.10.1",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "@types/bcryptjs": "^2.4.6"
   }
 }
