--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
-    "@types/jsdom": "^27.0.0",
+    "@types/jsdom": "^21.1.0",
     "@types/node": "^24.10.1",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.9.0",
@@ -51,7 +51,7 @@
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "http-server": "^14.1.1",
-    "jsdom": "^27.2.0",
+    "jsdom": "^25.0.1",
     "lighthouse": "^12.0.0",
     "lunr": "^2.3.9",
     "pa11y": "^9.0.1",
@@ -67,8 +67,7 @@
     "overrides": {
       "bigint-buffer": "npm:@gsknnft/bigint-buffer@1.3.2",
       "esbuild@<=0.24.2": ">=0.25.0",
-      "semver@>=7.0.0 <7.5.2": ">=7.5.2",
-      "whatwg-url": "^14.0.0"
+      "semver@>=7.0.0 <7.5.2": ">=7.5.2"
     },
     "onlyBuiltDependencies": [
       "@gsknnft/bigint-buffer",
