fix(railway): improve healthcheck configuration for Railway deployment
- Update backend Dockerfile HEALTHCHECK to use PORT env var
- Railway sets a dynamic PORT that differs from hardcoded 7071
- Increase healthcheck timeout from 5s to 10s in railway.json
- Increase healthcheck interval from 10s to 20s for stability
- Prevents premature healthcheck failures during startup

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -88,7 +88,7 @@ WORKDIR /app/backend
 EXPOSE 7071
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-  CMD node -e "require('http').get('http://localhost:7071/health', (r) => {if (r.statusCode !== 200) throw new Error(r.statusCode)})" || exit 1
+  CMD node -e "const port = process.env.PORT || 7071; require('http').get('http://localhost:' + port + '/health', (r) => {if (r.statusCode !== 200) throw new Error(r.statusCode)})" || exit 1
 
 # Start application
 CMD ["node", "dist/server.js"]
