fix(backend): update default port from 7071 to 8080 for Railway
- Railway sets PORT=8080 by default
- Update backend config default from 7071 to 8080
- Update Dockerfile EXPOSE from 7071 to 8080
- Update server.ts deployment comment
- Backend still respects PORT env var so works with any value Railway sets

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -84,8 +84,8 @@ RUN mkdir -p /app/data
 # Set working directory for backend
 WORKDIR /app/backend
 
-# Expose port 7071 as specified
-EXPOSE 7071
+# Expose port 8080 (Railway default)
+EXPOSE 8080
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
   CMD node -e "const port = process.env.PORT || 7071; require('http').get('http://localhost:' + port + '/health', (r) => {if (r.statusCode !== 200) throw new Error(r.statusCode)})" || exit 1
