--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -9,6 +9,7 @@
     "dev": "tsc --watch"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
     "@tiltcheck/types": "workspace:*"
   },
   "devDependencies": {
