ci: add Vercel status notification to CI workflow
Added vercel/repository-dispatch action to notify Vercel about CI status.
This integrates GitHub Actions results with Vercel deployments, showing
build/lint/test status in the Vercel dashboard.

- Runs on every CI completion (if: always())
- Continues on error to not break the workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,3 +67,10 @@ jobs:
           name: coverage-report
           path: coverage/
         continue-on-error: true
+      
+      - name: Notify Vercel
+        uses: vercel/repository-dispatch/actions/status@v1
+        if: always()
+        with:
+          name: Vercel - tiltcheck-monorepo: CI
+        continue-on-error: true
