--- a/apps/discord-bot/package.json
+++ b/apps/discord-bot/package.json
@@ -27,6 +27,9 @@
     "@tiltcheck/justthetip": "workspace:*",
     "@tiltcheck/natural-language-parser": "workspace:*",
     "@tiltcheck/poker": "workspace:*",
+    "@tiltcheck/collectclock": "workspace:*",
+    "@tiltcheck/qualifyfirst": "workspace:*",
+    "@tiltcheck/walletcheck": "workspace:*",
     "@tiltcheck/esm-utils": "workspace:*",
     "@tiltcheck/lockvault": "workspace:*",
     "@tiltcheck/pricing-oracle": "workspace:*",
