--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -12,6 +12,11 @@
     "@tanstack/react-query": "^5.90.12",
     "@tiltcheck/api-client": "workspace:*",
     "@tiltcheck/auth": "workspace:*",
+    "@tiltcheck/collectclock": "workspace:*",
+    "@tiltcheck/qualifyfirst": "workspace:*",
+    "@tiltcheck/walletcheck": "workspace:*",
+    "@tiltcheck/suslink": "workspace:*",
+    "@tiltcheck/logger": "workspace:*",
     "@tiltcheck/shared": "workspace:*",
     "@tiltcheck/types": "workspace:*",
     "next": "14.2.35",
