Fix @magic-sdk/react 404 error by changing dependency to magic-sdk
- Changed @magic-sdk/react to magic-sdk in apps/justthetip/package.json
- Updated workspace dependencies in frontend/package.json to use workspace:*
- Added fetch-depth: 0 to GitHub Actions workflow for proper monorepo resolution

--- a/apps/justthetip/package.json
+++ b/apps/justthetip/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@magic-ext/solana": "^25.0.0",
-    "@magic-sdk/react": "^22.0.0",
+    "magic-sdk": "^22.0.0",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
