--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "dev": "NODE_ENV=development node server.js"
   },
   "dependencies": {
-    "@tiltcheck/express-utils": "*",
+    "@tiltcheck/express-utils": "workspace:*",
     "express": "^4.19.0",
     "redis": "^5.10.0"
   }
