--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -6,7 +6,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && (tsc src/middleware/next.ts --outDir dist/middleware --declaration --declarationMap --sourceMap 2>&1 | grep -v \"error TS\" || true) && echo \"Warning: Next.js middleware compilation may have been skipped\"",
     "dev": "tsc --watch",
     "clean": "rm -rf dist",
     "test": "vitest --run"
@@ -20,7 +20,7 @@
     "@types/bs58": "^5.0.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
-    "next": "^16.0.10",
+    "next": "^14.0.0",
     "typescript": "^5.3.0",
     "vitest": "^1.6.0"
   },
