--- a/.env.template
+++ b/.env.template
@@ -11,54 +11,86 @@ DISCORD_CLIENT_SECRET=your_discord_client_secret_here
 # Optional: Guild ID for development (deploy to single server)
 # DISCORD_GUILD_ID=1446973117472964620
 
+# Optional: Alternative token key used in some modules
+DISCORD_BOT_TOKEN=
+
 # =============================================================================
 # OPTIONAL - Discord Alert Channels (for trust events and support)
 # =============================================================================
 # Channel IDs where the bot posts trust alerts and support tickets
-# Leave empty to disable automated alerts
 TRUST_ALERTS_CHANNEL_ID=1447524353263665252
 SUPPORT_CHANNEL_ID=1447524748069306489
 
 # =============================================================================
 # REQUIRED - Solana Blockchain Configuration
 # =============================================================================
-# Use mainnet for production, devnet for testing
+# Use mainnet-beta for production, devnet for testing
 SOLANA_RPC_URL=https://api.devnet.solana.com
-# SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
+SOLANA_NETWORK=devnet
 
 # Fee collection wallet (receives 0.0007 SOL per tip)
 JUSTTHETIP_FEE_WALLET=your_fee_wallet_address_here
 
 # Gas wallet for transaction fees
 GAS_WALLET_PUBLIC=your_gas_wallet_public_key_here
+TREASURY_WALLET_PUBLIC=your_treasury_wallet_public_key_here
 
 # =============================================================================
-# REQUIRED - Database Configuration (Supabase)
+# REQUIRED - Database Configuration
 # =============================================================================
+# Supabase (Primary)
 SUPABASE_URL=your_supabase_project_url_here
 SUPABASE_ANON_KEY=your_supabase_anon_key_here
+SUPABASE_SERVICE_ROLE_KEY=
 
-# Note: Configure these settings in Supabase Dashboard > Authentication > URL Configuration:
-# - Site URL: https://tiltcheck.me (your production domain)
-# - Redirect URLs: Add all OAuth callback URLs (see OAUTH_URIS.md for full list)
+# Neon/PostgreSQL (Alternative/Additional)
+NEON_DATABASE_URL=postgresql://user:password@localhost:5432/tiltcheck
+DATABASE_URL=postgresql://user:password@localhost:5432/tiltcheck
+DATABASE_SSL=true
+DATABASE_POOL_SIZE=10
+
+# MongoDB (For certain services)
+MONGODB_URI=mongodb://localhost:27017/tiltcheck
+
+# Redis (For caching/sessions/rate-limiting)
+REDIS_URL=redis://localhost:6379
 
 # =============================================================================
 # REQUIRED - Security & Authentication
 # =============================================================================
 # Strong random string for JWT signing
 JWT_SECRET=your_jwt_secret_minimum_32_characters_here
+JWT_ISSUER=tiltcheck.me
+JWT_AUDIENCE=tiltcheck.me
+JWT_EXPIRES_IN=7d
+
+# Service-to-Service Authentication
+SERVICE_JWT_SECRET=your_service_jwt_secret_here
+SERVICE_ID=tiltcheck-main
+ALLOWED_SERVICES=api,bot,dashboard
 
 # Strong random string for session encryption
 SESSION_SECRET=your_session_secret_minimum_32_characters_here
 
+# Encryption key for sensitive data
+API_KEY_ENCRYPTION_KEY=
+
 # Admin password for protected endpoints
 ADMIN_PASSWORD=your_secure_admin_password_here
+
+# Cookie Configuration
+SESSION_COOKIE_NAME=tiltcheck_session
+COOKIE_DOMAIN=.tiltcheck.me
+COOKIE_SECURE=true
+COOKIE_MAX_AGE=604800
 
 # =============================================================================
 # OPTIONAL - Discord OAuth (for web authentication)
 # =============================================================================
 DISCORD_CALLBACK_URL=http://localhost:3001/auth/discord/callback
 DISCORD_REDIRECT_URI=http://localhost:3001/auth/discord/callback
+AUTH_REDIRECT_URL=https://tiltcheck.me/auth/callback
+AUTH_FAILURE_URL=/?error=auth_failed
 
 # Optional: Discord webhook for notifications
 DISCORD_WEBHOOK_URL=
@@ -69,77 +101,104 @@ DISCORD_WEBHOOK_URL=
 # OpenAI API key for AI features
 OPENAI_API_KEY=
 
-# Note: Pricing oracle uses Jupiter Price API (https://price.jup.ag) for Solana token prices.
-# No API key required - Jupiter provides free, real-time price data.
+# Stripe Configuration
+STRIPE_SECRET_KEY=
+STRIPE_PUBLIC_KEY=
+STRIPE_WEBHOOK_SECRET=
+STRIPE_PRICE_ID=
 
-# =============================================================================
-# OPTIONAL - Database Alternatives
-# =============================================================================
-# PostgreSQL connection string (alternative to Supabase)
-# DATABASE_URL=postgresql://user:password@localhost:5432/tiltcheck
-
-# Redis connection string (for caching/sessions)
-# REDIS_URL=redis://localhost:6379
+# ChangeNow API (for LTC bridge)
+CHANGENOW_API_KEY=
 
 # =============================================================================
 # PUBLIC URL CONFIGURATION
 # =============================================================================
-# Base URL for sitemap generation and canonical links (default: https://tiltcheck.me)
+# Base URLs for frontend/backend interaction
 PUBLIC_BASE_URL=https://tiltcheck.me
+API_URL=https://api.tiltcheck.me
+WS_URL=wss://api.tiltcheck.me/ws
+BACKEND_URL=https://api.tiltcheck.me
+DASHBOARD_URL=https://tiltcheck.me/dashboard
+
+# Next.js Public Vars
+NEXT_PUBLIC_API_URL=http://localhost:3000
+NEXT_PUBLIC_BACKEND_URL=http://localhost:3000
+
+# Vite Public Vars
+VITE_API_URL=http://localhost:8080
+
+# AI Gateway URL
+AI_GATEWAY_URL=https://ai-gateway.tiltcheck.me
 
 # =============================================================================
-# SERVICE PORTS (Optional - defaults shown)
+# SERVICE PORTS & HOSTING
 # =============================================================================
 PORT=3000
+HOST=0.0.0.0
 LANDING_PORT=3000
 CONTROL_ROOM_PORT=3001
 QUALIFYFIRST_PORT=8080
 CASINO_API_PORT=6002
 
 # Health check ports
+HEALTH_CHECK_HOST=localhost
 DISCORD_BOT_HEALTH_PORT=8081
 DAD_BOT_HEALTH_PORT=8082
 EVENT_ROUTER_HEALTH_PORT=8083
-
-# =============================================================================
-# INTERNAL API CONFIGURATION
-# =============================================================================
-# TiltCheck API domain (production)
-TILTCHECK_API_URL=https://api.tiltcheck.me
-
-# Casino data API authentication
-CASINO_API_KEY=tiltcheck-casino-collector-2024
-
-# TiltCheck internal API key
-TILTCHECK_API_KEY=
-
-# Admin token for gauge configuration
-GAUGE_ADMIN_TOKEN=
 
 # =============================================================================
 # DATA RETENTION & STORAGE
 # =============================================================================
 # How many days to keep event data
 DASHBOARD_EVENTS_KEEP_DAYS=7
+DASHBOARD_POLL_MS=30000
 
 # Evidence package retention
 EVIDENCE_RETENTION_DAYS=30
 EVIDENCE_MAX_COUNT=1000
-
-# Dashboard polling interval (milliseconds)
-DASHBOARD_POLL_MS=30000
 
 # Storage paths for persistent data
 LOCKVAULT_STORE_PATH=./data/lockvault-store.json
 PENDING_TIPS_STORE_PATH=./data/pending-tips-store.json
 COLLECTCLOCK_LOG_DIR=./logs/collectclock
 LANDING_LOG_PATH=./logs/landing.log
+TRUST_ENGINES_PERSIST_DIR=./data
+TRUST_ENGINES_LOG_DIR=./logs/trust-engines
 
 # =============================================================================
-# FEATURE FLAGS
+# MODULE-SPECIFIC CONFIGURATION
+# =============================================================================
+# JustTheTip
+PRIZE_ADMIN_USER_IDS=123,456
+
+# CollectClock
+COLLECTCLOCK_LOG_ERRORS=1
+
+# Trust Engines
+TRUST_ENGINES_LOG_ERRORS=1
+
+# Multi-Bot Configuration (Used in ecosystem.bots.config.js)
+MAIN_DISCORD_TOKEN=
+MAIN_DISCORD_CLIENT_ID=
+MAIN_DISCORD_GUILD_ID=
+MAIN_DASHBOARD_URL=
+MAIN_COMMAND_PREFIX=!
+MAIN_SUSLINK_AUTO_SCAN=true
+MAIN_TRUST_THRESHOLD=60
+
+DAD_DISCORD_TOKEN=
+DAD_DISCORD_CLIENT_ID=
+DAD_DISCORD_GUILD_ID=
+DAD_COMMAND_PREFIX=!
+DAD_SUSLINK_AUTO_SCAN=true
+DAD_TRUST_THRESHOLD=60
+
+# =============================================================================
+# FEATURE FLAGS & LOGGING
 # =============================================================================
 # Environment: development, production, test
 NODE_ENV=development
+LOG_LEVEL=info
 
 # Skip Discord OAuth (for local development/testing)
 SKIP_DISCORD_LOGIN=false
@@ -150,6 +209,9 @@ ENABLE_CASINO_VERIFICATION=true
 # Required trust level for certain features (0-100)
 REQUIRED_TRUST_LEVEL=0
 
+# Founder Usernames (for special access)
+FOUNDER_USERNAMES=jmenichole
+
 # =============================================================================
 # SECURITY CONFIGURATION
 # =============================================================================
@@ -159,20 +221,17 @@ NEWSLETTER_SALT=your_random_salt_here
 # CORS allowed origins (comma-separated)
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
 
-# Admin IP whitelist (prefix matching)
-# ADMIN_IP_=192.168.1.
-
-# =============================================================================
-# LOGGING CONFIGURATION (Optional)
-# =============================================================================
-# CollectClock logging
-COLLECTCLOCK_LOG_ERRORS=true
+# Admin IP whitelist
+ADMIN_IP_1=127.0.0.1
+ADMIN_IP_2=
+ADMIN_IP_3=
 
 # =============================================================================
 # TESTING & CI/CD (Optional)
 # =============================================================================
 # Set to 'true' in CI environment
 CI=false
+DEBUG_ENV_LOADING=false
 
 # =============================================================================
 # NOTES
@@ -192,8 +251,6 @@ CI=false
 # 1. Copy this file: cp .env.template .env
 # 2. Fill in at minimum all REQUIRED variables
 # 3. Customize OPTIONAL variables as needed
-# 4. Test each service individually
 # 
 # MORE INFORMATION:
 # See AUDIT-REPORT.md for detailed environment variable documentation
-# See individual service README files for service-specific requirements
